--- a/index.html
+++ b/index.html
@@ -1,58 +1,164 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>ODS 13</title>
-</head>
-<body>
-        <header>
-            <nav class="nav_bar">
-                <ul class="nav_list">
-                    <li><a href="" id="list-item-link">Introdução</a></li>
-                    <li><a href="" id="list-item-link">Objetivos</a></li>
-                    <li><a href="" id="list-item-link">Saiba mais</a></li>
-                </ul>
-            </nav>
-        </header>
+  </head>
+  <body>
+    <header>
+      <nav class="nav_bar">
+        <ul class="nav_list">
+          <li>
+            <a href="#introduction-div" id="list-item-link">Introdução</a>
+          </li>
+          <li>
+            <a href="#objetivo-container" id="list-item-link">Objetivos</a>
+          </li>
+          <li>
+            <a href="#info-boxes-solutions" id="list-item-link">Saiba mais</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-        <main>
-            <div class="introduction_div">
-                <div class="introduction_div_title_box">
-                 <h1>Ação Contra a Mudança Global do Clima </h1>
-                 <br>
-                 <p>Seu foco é reduzir os impactos do aquecimento global, promovendo políticas e práticas sustentáveis.
-Ela incentiva governos, empresas e cidadãos a adotarem medidas para diminuir as emissões de gases poluentes.</p>
-                </div>
-                <img src="./images/OIP.webp" alt="ODS-13">
-            </div>
-            <div class="video_div">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/08TkOzQ2Tw4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
+    <main>
+      <!-- INTRODUÇÃO -->
+      <div id="introduction-div">
+        <div class="introduction_div_title_box">
+          <h1>Ação Contra a Mudança Global do Clima</h1>
+          <br />
+          <p>
+            Seu foco é reduzir os impactos do aquecimento global, promovendo
+            políticas e práticas sustentáveis. Ela incentiva governos, empresas
+            e cidadãos a adotarem medidas para diminuir as emissões de gases
+            poluentes.
+          </p>
+        </div>
+        <img src="./images/OIP.webp" alt="ODS-13" />
+      </div>
+      <div class="video_div">
+        <iframe
+          width="660"
+          height="415"
+          src="https://www.youtube.com/embed/08TkOzQ2Tw4"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
 
-            <div class="info_boxes_div">
-                <div class="info_box">
-                    Nos últimos anos, a concentração de CO₂ na atmosfera aumentou rapidamente, atingindo níveis recordes em 2023, com 424 ppm.
-                    Esse crescimento intensifica o aquecimento global e provoca o aumento da temperatura dos oceanos.
-                    Como consequência, há o derretimento das calotas polares e a elevação do nível do mar.
-                    Essas mudanças causam perda de biodiversidade e afetam ecossistemas em todo o planeta
-                </div>
+      <!-- OBJETIVOS -->
+      <div id="objetivo-container">
+        <div class="objetivo_texto">
+          <h1>
+            Objetivo 13. Tomar medidas urgentes para combater a mudança
+            climática e seus impactos
+          </h1>
 
-                <div class="info_box">
-                    <p>
-                    Nos últimos anos, a concentração de CO₂ na atmosfera aumentou rapidamente, atingindo níveis recordes em 2023, com 424 ppm.
-                        
-                    </p>    
-                </div>
+          <div class="sub_objetivo">
+            <h3>13.1</h3>
+            <p>
+              Reforçar a resiliência e a capacidade de adaptação a riscos
+              relacionados ao clima e às catástrofes naturais em todos os
+              países.
+            </p>
+          </div>
+          <br />
+          <div class="sub_objetivo">
+            <h3>13.2</h3>
+            <p>
+              Integrar medidas da mudança do clima nas políticas, estratégias e
+              planejamentos nacionais.
+            </p>
+          </div>
+          <br />
+          <div class="sub_objetivo">
+            <h3>13.3</h3>
+            <p>
+              Melhorar a educação, aumentar a conscientização e a capacidade
+              humana e institucional sobre mitigação, adaptação, redução de
+              impacto e alerta precoce da mudança do clima.
+            </p>
+          </div>
+          <br />
+          <div class="sub_objetivo">
+            <h3>13.a</h3>
+            <p>
+              Implementar o compromisso assumido pelos países desenvolvidos
+              partes da Convenção Quadro das Nações Unidas sobre Mudança do
+              Clima [UNFCCC] para a meta de mobilizar conjuntamente US$ 100
+              bilhões por ano a partir de 2020, de todas as fontes, para atender
+              às necessidades dos países em desenvolvimento, no contexto das
+              ações de mitigação significativas e transparência na
+              implementação; e operacionalizar plenamente o Fundo Verde para o
+              Clima por meio de sua capitalização o mais cedo possível
+            </p>
+          </div>
+          <br />
+          <div class="sub_objetivo">
+            <h3>13.b</h3>
+            <p>
+              Promover mecanismos para a criação de capacidades para o
+              planejamento relacionado à mudança do clima e à gestão eficaz, nos
+              países menos desenvolvidos, inclusive com foco em mulheres,
+              jovens, comunidades locais e marginalizadas
+            </p>
+          </div>
+        </div>
+      </div>
 
-                <div class="info_box">
-                    Nos últimos anos, a concentração de CO₂ na atmosfera aumentou rapidamente, atingindo níveis recordes em 2023, com 424 ppm.
-                    Esse crescimento intensifica o aquecimento global e provoca o aumento da temperatura dos oceanos.
-                    Como consequência, há o derretimento das calotas polares e a elevação do nível do mar.
-                    Essas mudanças causam perda de biodiversidade e afetam ecossistemas em todo o planeta
-                </div>
-            </div>
-        </main>
-</body>
+      <!-- SOLUÇÕES -->
+      <div id="info-boxes-solutions">
+        <h1>Soluções</h1>
+        <div class="info_boxes_div">
+          <div class="info_box">
+            <h2>solução 1 🌱</h2>
+            <p>
+              Soluções individuais (pessoas podem fazer) Reduzir o consumo de
+              energia: usar lâmpadas LED, desligar aparelhos, aproveitar luz
+              natural. Transporte sustentável: andar de bicicleta, usar
+              transporte público ou veículos elétricos. Consumo consciente:
+              comprar de produtores locais, evitar desperdício, reduzir o uso de
+              plástico. Alimentação sustentável: diminuir o consumo de carne e
+              priorizar alimentos de origem vegetal. Plantar árvores e cuidar de
+              áreas verdes.
+            </p>
+          </div>
+
+          <div class="info_box">
+            <h2>solução 2 🌍</h2>
+            <p>
+              Soluções comunitárias e locais Campanhas de conscientização:
+              palestras, oficinas, posts informativos sobre o clima. Projetos de
+              coleta seletiva e compostagem. Criação de hortas urbanas e jardins
+              comunitários. Incentivo a feiras sustentáveis e trocas de
+              produtos. Projetos escolares sobre energia renovável e reciclagem.
+            </p>
+          </div>
+
+          <div class="info_box">
+            <h2>solução 3⚡</h2>
+            <p>
+              Soluções governamentais e globais Criação e cumprimento de
+              políticas climáticas. Investimento em energias renováveis. Apoio a
+              acordos internacionais, como o Acordo de Paris. Incentivos fiscais
+              para empresas sustentáveis. Educação ambiental nas escolas.
+            </p>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <p>
+          © 2025 Luis Gustavo. |
+          <a href="#introduction-div">Voltar ao topo</a>
+        </p>
+        <br>
+        <a href="https://brasil.un.org/pt-br/sdgs/13">ODS 13 - Site ONU</a>
+      </footer>
+    </main>
+  </body>
 </html>
